2001-06-16  

	* more cleanups in fs_func.h, maybe common, unified access to filesystem will
	  be available
	* cleaned out some global variables

2001-06-14  

	* moved some stuff to config.h included by all .c files
	* signess clean version, towards non-Linux ports
	  (almost compiles under BC++5.2)

2001-04-15  

	* fs_accel fixes and extensions

2001-04-13  

	* fixed save (works), promoted to v0.8, load&save have Action Replay-like
	  messages

2001-02-01  

	* fixed configuration parser bug (empty lines were not allowed)

2000-07-25  

	* more wedge fixes, open/close is fixed, fishload works

2000-07-24  

	* wedge fixes, untalk/unlisten change

2000-07-24  

	* new wedge updates, load and save stuff

2000-07-20  

	* docs update

2000-06-15  

	* Rewritten sync_char() stuff, transfer errors seem to be fixed now

2000-06-14  

	* Removed changes from dosemu.c

2000-06-13  

	* Few replacements with libc functions, should be still portable

2000-06-12  

	* Various bugfixes, LUnix stuff is fully working now

2000-06-11  

	* Created repository
