@@ -3,7 +3,7 @@
    */
 
 
-#ifdef DEBUG
+#ifdef DEBUG_RES
 
 /* limit of resource library size */
 #define MAX_RES_COUNT 32
@@ -14,11 +14,14 @@
 #define RES_dir 2
 
 /* file open and close logging */
-
-FILE *res_fopen(uchar *a,char *b);
+FILE *res_fopen(uchar *a, uchar *b);
 int res_fclose(FILE *f);
 DIR *res_opendir(uchar *a);
 int res_closedir(DIR *d);
+
+/* not used now */
+int register_resource (int rt, uchar *source, uchar *desc);
+int show_resource (int rn);
 
 #define fopen res_fopen
 #define fclose res_fclose
